unpackaged/main/default/objects/ClientProduct__c/ClientProduct__c.object-meta.xml
<CustomObject>
    <label>Client Product</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Client Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>