unpackaged/main/default/objects/ClientProduct__c/fields/Is_last_registration__c.field-meta.xml
<CustomField>
    <fullName>Is_last_registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is last registration</label>
    <type>Checkbox</type>
</CustomField>