unpackaged/main/default/objects/ClientProduct__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Client Products</relationshipLabel>
    <relationshipName>Client_Products</relationshipName>
    <type>Lookup</type>
</CustomField>