unpackaged/main/default/objects/ClientProduct__c/fields/ProductRelationDate__c.field-meta.xml
<CustomField>
    <fullName>ProductRelationDate__c</fullName>
    <label>Product Relation Date</label>
    <type>Date</type>
</CustomField>