unpackaged/main/default/objects/ClientProduct__c/fields/Purchase_type__c.field-meta.xml
<CustomField>
    <fullName>Purchase_type__c</fullName>
    <label>Purchase type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>