unpackaged/main/default/objects/ClientProduct__c/fields/PurchaseCity__c.field-meta.xml
<CustomField>
    <fullName>PurchaseCity__c</fullName>
    <label>Purchase City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>