unpackaged/main/default/objects/ClientProduct__c/fields/PurchaseStore__c.field-meta.xml
<CustomField>
    <fullName>PurchaseStore__c</fullName>
    <label>Purchase Store</label>
    <length>255</length>
    <type>Text</type>
</CustomField>