unpackaged/main/default/objects/ClientProduct__c/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <label>Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>