unpackaged/main/default/objects/ClientProduct__c/fields/WarrantyEndDate__c.field-meta.xml
<CustomField>
    <fullName>WarrantyEndDate__c</fullName>
    <label>Warranty End Date</label>
    <type>Date</type>
</CustomField>