unpackaged/main/default/objects/ClientProduct__c/fields/WarrantyStartDate__c.field-meta.xml
<CustomField>
    <fullName>WarrantyStartDate__c</fullName>
    <label>Warranty Start Date</label>
    <type>Date</type>
</CustomField>