unpackaged/main/default/objects/ClientProduct__c/fields/WarrantyType__c.field-meta.xml
<CustomField>
    <fullName>WarrantyType__c</fullName>
    <label>Warranty Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5YearWarranty</fullName>
                <label>5 Year Warranty</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>